# flcppy-bird

./: CMakeLists.txt  README.md  main.cpp
include/: assets.hpp  config.hpp
include/objects/: background.hpp  bird.hpp  floor.hpp  game_over_message.hpp  game_start_message.hpp  pipe.hpp  score.hpp
